# arc_analyzer

./: .pre-commit-config.yaml  GUI.py  README.md  main.py  main.spec  pyproject.toml  test_file.py
src/: GUI.py  main.py
src/load_files/: load_csv.py
src/results/: data_filtr.py
