[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-python-project"
version = "0.1.0"
description = "A Python project for processing data and generating results."
authors = [
    { name = "Your Name", email = "youremail@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "matplotlib==3.4.3",
    "numpy==1.21.2",
    "pandas==1.3.3",
    "pre-commit==2.15.0",
    "black==21.9b0",
    "mypy==0.910",
    "pylint==2.11.1"
]